--- a/esma/Allah.html
+++ b/esma/Allah.html
@@ -7,45 +7,8 @@
     <meta name="description" content="Esma-i Husna" />
     <link rel="stylesheet" href="esma.css" media="all">
     <link rel="icon" href="/Kuran/image/icon.png">
-    <title>Ramazan 1444</title>
+    <title>Esmâ-i Husnâ</title>
   </head>
-  <style>
-    body {
-      max-width: 550px;
-      padding: 0 10px;
-      margin: auto;
-      font: 15px/1.4 sans-serif;
-      background: #eef;
-    }
-    ol {
-      display: inline-block;
-      width: 49%;
-      list-style: none;
-      padding: 0;
-      margin: 0;
-    }
-    li {
-      padding: 6px 4px;
-      margin: 0;
-    }
-    h3 {
-      margin-bottom: 4px;
-    }
-    p {
-      margin-top: 4px;
-    }
-    #bir li:nth-child(n+2) {
-        color: lightgray;
-    }
-    #iki li {
-        color: lightgray;
-    }
-  @media screen and (max-width: 500px) {
-    ol  {
-        width: 95%;
-    }
-  }
-  </style>
   <body>
 
 <h3>Allâh celle celâluh &emsp;<button class=goBack>◀</button></h3>
@@ -55,13 +18,13 @@
 
 <p>Allah kelimesi iyelik ve çoğul eki kabul etmez. Birdir, tekdir. Kelimenin nasıl kullanıldığına birkaç ayetle örnek verelim:
 <p>1. Tur dağında genç bir çoban. Ailesiyle giderken yolu kaybediyor. Dağdaki ışık çağırıyor ve yaklaşınca şu hitabı duyuyor:
-<img style="width:250px" src="./image/inneniy enallah.jpg" alt="inneniy enallah"></p>
+<img class=narrow src="./image/inneniy enallah.jpg" alt="inneniy enallah"></p>
 <p>20:14 <a name="v=20:14">innenî enallâhu lâ ilâhe illâ ene</a><br> 
 <i>Benim, Ben Allah, Benden başka ilâh yok</i></p>
 <p>Hz Musa ilk tevhid dersini kayınpederinden almıştı. İkinci ders bu ürkütücü nida oldu. Asıl imtihan işte tam orada başladı: Önce zulüm üstüne kurulan Firavun düzenine karşı, sonra putlar arayan kendi kavmine karşı mücadele sürdü gitti.</p>
 <br>
 <p>2. Kudüs'te yaşlı bir din adamı. Allah'a adanmış yeğeni Meryem'i görüp ona imreniyor. Melekler bir çocuk müjdeleyince şaşırıyor. Meleklerin cevabında şu emir var:
-<img style="width:250px" src="./image/vezkur rabbeke.jpg" alt="vezkur rabbeke"></p>
+<img class=narrow src="./image/vezkur rabbeke.jpg" alt="vezkur rabbeke"></p>
 <p>3:41 <a name="v=3:41&r=*kr&r=rbb&r=kvr">veżkur rabbeke keśîran</a> 
 <i>Rabbini çok zikret </i><br>
 (Bu ayette lafza-i celal yok, 5. nota bakın)</p>
@@ -79,7 +42,8 @@ En azından, günde beş vakit, her namazın peşinden gelen tesbihat içinde 99
 <p>Neden Allah'ı anarken "celle celâluh" diyoruz? Çünkü lafza-i celâl...
 Peki neden "lafza-i celâl?" Cevabı Ramazan'ın son günü, 29. konuda... inşâllah</p>
 <br>
-<p>5. Türkçe'de <b>Allah</b> ile nerdeyse eş-anlamlı kullanılan <b>Rabb</b> kelimesi, Esmâ-i Husnâ içinde değil, <i>er-rabb</i> şeklinde asla kullanılmaz. Çünkü <a href="../cuma/rabler.html">Allah bir, rabler çok</a>.
+<p>5. Türkçe'de <b>Allah</b> ile nerdeyse eş-anlamlı kullanılan <b>Rabb</b> kelimesi, Esmâ-i Husnâ içinde değildir, <i>er-rabb</i> şeklinde asla kullanılmaz. <br>
+Çünkü <a href="../cuma/rabler.html">Allah bir, rabler çok</a>.
 <script src="init.js"></script>
   </body>
 </html>
