--- a/esma/Malik.html
+++ b/esma/Malik.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Esma-i Husna" />
     <link rel="stylesheet" href="esma.css" media="all">
     <link rel="icon" href="/Kuran/image/icon.png">
-    <title>Ramazan 1444</title>
+    <title>Esmâ-i Husnâ</title>
   </head>
   <body>
 
