--- a/esma/Rahman.html
+++ b/esma/Rahman.html
@@ -7,45 +7,8 @@
     <meta name="description" content="Esma-i Husna" />
     <link rel="stylesheet" href="esma.css" media="all">
     <link rel="icon" href="/Kuran/image/icon.png">
-    <title>Ramazan 1444</title>
+    <title>Esmâ-i Husnâ</title>
   </head>
-  <style>
-    body {
-      max-width: 550px;
-      padding: 0 10px;
-      margin: auto;
-      font: 15px/1.4 sans-serif;
-      background: #eef;
-    }
-    ol {
-      display: inline-block;
-      width: 49%;
-      list-style: none;
-      padding: 0;
-      margin: 0;
-    }
-    li {
-      padding: 6px 4px;
-      margin: 0;
-    }
-    h3 {
-      margin-bottom: 4px;
-    }
-    p {
-      margin-top: 4px;
-    }
-    #bir li:nth-child(n+2) {
-        color: lightgray;
-    }
-    #iki li {
-        color: lightgray;
-    }
-  @media screen and (max-width: 500px) {
-    ol  {
-        width: 95%;
-    }
-  }
-  </style>
   <body>
 
 <h3>er-Rahmân, er-Rahîm &emsp;<button class=goBack>◀</button></h3>
@@ -65,7 +28,7 @@ Demek ki Rahmân, kendi nefsine yazdığı rahmetinin gereği olarak Kuran'ı ö
 Yani "Rahîm" ismi ancak ona layık olan müminler için...</p>
 <br>
 <p>Bu iki rahmet ismi altı ayette yan yana geçiyor:
-<img style="width:100%" src="./image/errahman errahim.png" alt="iki isim yan yana"></p>
+<img class=full src="./image/errahman errahim.png" alt="iki isim yan yana"></p>
 <p>Dördünde "<i>errahmân, errahîm</i>" i halinde:<br>
 41:2 <a name="v=41:2&r=rHm">minerrahmânirrahîm</a><br>
 Haşr suresinin sık tekrarlanan son üç ayetinde ise u halinde, çünkü özne:<br>
