--- a/esma/index.html
+++ b/esma/index.html
@@ -6,7 +6,7 @@
     <meta name="author"      content="M A Eyler, Istanbul, 2023" />
     <meta name="description" content="Esma-i Husna" />
     <link rel="icon" href="/Kuran/image/icon.png">
-    <title>Ramazan 1444</title>
+    <title>Esmâ-i Husnâ</title>
   </head>
   <style>
     body {
@@ -33,7 +33,7 @@
     p {
       margin-top: 4px;
     }
-    #bir li:nth-child(n+2) {
+    #bir li:nth-child(n+6) {
         color: lightgray;
     }
     #iki li {
@@ -53,7 +53,7 @@
 <ol id="bir">
   <li><a href="/Kitap/esma/Allah.html"><b>Allâh</b> celle celâluh</a>
   <li>1. <a href="/Kitap/esma/Rahman.html">er-Rahmân, er-Rahîm</a>
-  <li>2. el-Mâlik, el-Melik
+  <li>2. <a href="/Kitap/esma/Malik.html">el-Mâlik, el-Melik</a>
   <li>3. el-Kuddûs, es-Selâm
   <li>4. el-Mu'min, el-Muheymin
   <li>5. el-Cebbâr, el-Mutekebbir
