--- a/esma/index.html
+++ b/esma/index.html
@@ -54,7 +54,7 @@
   <li><a href="/Kitap/esma/Allah.html"><b>Allâh</b> celle celâluh</a>
   <li>1. <a href="/Kitap/esma/Rahman.html">er-Rahmân, er-Rahîm</a>
   <li>2. <a href="/Kitap/esma/Malik.html">el-Mâlik, el-Melik</a>
-  <li>3. el-Kuddûs, es-Selâm
+  <li>3. <a href="/Kitap/esma/Selam.html">el-Kuddûs, es-Selâm</a>
   <li>4. el-Mu'min, el-Muheymin
   <li>5. el-Cebbâr, el-Mutekebbir
   <li>6. el-Hâlık, el-Hallâk
