--- a/esma/index.html
+++ b/esma/index.html
@@ -33,7 +33,7 @@
     p {
       margin-top: 4px;
     }
-    #bir li:nth-child(n+6) {
+    #bir li:nth-child(n+7) {
         color: lightgray;
     }
     #iki li {
@@ -55,7 +55,7 @@
   <li>1. <a href="/Kitap/esma/Rahman.html">er-Rahmân, er-Rahîm</a>
   <li>2. <a href="/Kitap/esma/Malik.html">el-Mâlik, el-Melik</a>
   <li>3. <a href="/Kitap/esma/Selam.html">el-Kuddûs, es-Selâm</a>
-  <li>4. el-Mu'min, el-Muheymin
+  <li>4. <a href="/Kitap/esma/Mumin.html">el-Mu'min, el-Muheymin</a>
   <li>5. el-Cebbâr, el-Mutekebbir
   <li>6. el-Hâlık, el-Hallâk
   <li>7. el-Bâri', el-Musavvir
