use caption class

--- a/esma/Allah.html
+++ b/esma/Allah.html
@@ -19,13 +19,13 @@
 <p>Allah kelimesi iyelik ve çoğul eki kabul etmez. Birdir, tekdir. Kelimenin nasıl kullanıldığına birkaç ayetle örnek verelim:
 <p>1. Tur dağında genç bir çoban. Ailesiyle giderken yolu kaybediyor. Dağdaki ışık çağırıyor ve yaklaşınca şu hitabı duyuyor:
 <img class=narrow src="./image/inneniy enallah.jpg" alt="inneniy enallah"></p>
-<p>20:14 <a name="v=20:14">innenî enallâhu lâ ilâhe illâ ene</a><br> 
+<p><a name="v=20:14">20:14</a> <b>innenî enallâhu lâ ilâhe illâ ene</b><br> 
 <i>Benim, Ben Allah, Benden başka ilâh yok</i></p>
 <p>Hz Musa ilk tevhid dersini kayınpederinden almıştı. İkinci ders bu ürkütücü nida oldu. Asıl imtihan işte tam orada başladı: Önce zulüm üstüne kurulan Firavun düzenine karşı, sonra putlar arayan kendi kavmine karşı mücadele sürdü gitti.</p>
 <br>
 <p>2. Kudüs'te yaşlı bir din adamı. Allah'a adanmış yeğeni Meryem'i görüp ona imreniyor. Melekler bir çocuk müjdeleyince şaşırıyor. Meleklerin cevabında şu emir var:
 <img class=narrow src="./image/vezkur rabbeke.jpg" alt="vezkur rabbeke"></p>
-<p>3:41 <a name="v=3:41&r=*kr&r=rbb&r=kvr">veżkur rabbeke keśîran</a> 
+<p><a name="v=3:41&r=*kr&r=rbb&r=kvr">3:41</a> <b>veżkur rabbeke keśîran</b> 
 <i>Rabbini çok zikret </i><br>
 (Bu ayette lafza-i celal yok, 5. nota bakın)</p>
 <p>Hz Zekeriya'nın hikayesi Kitap'ta böyle bitiyor. Ardından kendi oğlu Yahya ve Meryem'in oğlu İsa aynı mücadeleyi sürdürüyor.</p>
@@ -36,9 +36,9 @@ En azından, günde beş vakit, her namazın peşinden gelen tesbihat içinde 99
 <p>4. "Allah'ı <b>çokça</b> zikret" emri üç ayette geçiyor:
 <img src="./image/vezkurullahe.jpg" alt="vezkurullahe"></p>
 <p>
-8:45 <a name="v=8:45&r=*kr&r=kvr">veżkurullâhe keśîran</a><br>
-33:41 <a name="v=33:41&r=*kr&r=kvr">veżkurullâhe żikran keśîran</a><br>
-62:10 <a name="v=62:10&r=*kr&r=kvr">veżkurullâhe keśîran</a><br>
+<a name="v=8:45&r=*kr&r=kvr">8:45</a> <b>veżkurullâhe keśîran</b><br>
+<a name="v=33:41&r=*kr&r=kvr">33:41</a> <b>veżkurullâhe żikran keśîran</b><br>
+<a name="v=62:10&r=*kr&r=kvr">62:10</a> <b>veżkurullâhe keśîran</b><br>
 <p>Neden Allah'ı anarken "celle celâluh" diyoruz? Çünkü lafza-i celâl...
 Peki neden "lafza-i celâl?" Cevabı Ramazan'ın son günü, 29. konuda... inşâllah</p>
 <br>
