--- a/esma/Empty.html
+++ b/esma/Empty.html
@@ -14,7 +14,10 @@
 <h3> &emsp;<button class=goBack>◀</button></h3>
 
 <p>
-<img src= alt=""></p>
+<img src= alt="hat eseri">
+<div class="caption">
+  Kaynak: <a target=Kuran href=>Pinterest</a>
+</div></p>
 <p>1:1 <a name="v=1:1&r=rHm"></a> <br>
 </p>
 <p>
