--- a/esma/Malik.html
+++ b/esma/Malik.html
@@ -15,24 +15,29 @@
 
 <p>Rahmet sıfatları o kadar geniş ki insan kendini sınırsız bir özgürlük içinde görebilir. Fatiha suresi rahmeti ilan ettikten sonra elbette hesabı hatırlatacak: 
 <img src="image/maliki yevmiddin.jpg" alt="maliki yevmiddin">
-</p>
-<p>1:4 <a name="v=1:4&r=mlk&r=ywm">mâliki yevmid-dîn</a> &emsp;
-<i>Din gününün Sahibi</i><br>
-"Rahmetin genişliğine güvenip azgınlaşma, hesap var, ödeşme var. Ödeşme gününün Sahibi de yine o rahmetin Sahibidir."</p>
+<div class="caption">
+  <b><a name="v=1:4&r=mlk&r=ywm">mâliki yevmid-dîn</a></b> &emsp;
+  <i>Din gününün Sahibi</i>
+</div></p>
+<p>"Rahmetin genişliğine güvenip azgınlaşma, hesap var, ödeşme var. Ödeşme gününün Sahibi de yine o rahmetin Sahibidir."</p>
 <p><b>Mâlik</b> ismini anlamamız için bu dünyada küçük ölçekli bir mülkiyet var: "Şuraya kadar benim, şurdan sonrası onun" diyen kayıt sistemleri geliştirmişiz. Lakin mülkün ilk ve gerçek Sahibini unutmak olmaz:
-<img src="image/malikul-mulk.jpg" alt="malikul-mulk"></p>
-<p>3:26 <a name="v=3:26&r=mlk">kulillâhumme mâlikel-mulk</a> <br>
-<i>De ki: "Ey mülkün Mâliki Allah! Mülkü dilediğine verirsin, dilediğinden çeker alırsın; dilediğini aziz, dilediğini zelil edersin. Hayır Senin elindedir. Şüphesiz, Sen her şeye kâdirsin.</i>
+<img src="image/malikul-mulk.jpg" alt="malikul-mulk">
+<div class="caption">
+  <b><a name="v=3:26&r=mlk">kulillâhumme mâlikel-mulk</a></b>
+</div></p>
+<p><i>De ki: "Ey mülkün Mâliki Allah! Mülkü dilediğine verirsin, dilediğinden çeker alırsın; dilediğini aziz, dilediğini zelil edersin. Hayır Senin elindedir. Şüphesiz, Sen her şeye kâdirsin.</i>
 </p>
 <p>"Bugün mülk kimin?" dehşetli bir soru... Sorunun cevabı 16. günde gelecek, inşaallah.</p>
 <br>
-<p>Aynı kökten türeyen bir de <b>Melik</b> ismi var. Kitap'ta 15 kere geçiyor: Çoğu dünya kralları için kullanılmış, 5 tanesi el-Melikul-Hakk: <i>Gerçek Melik</i>. </p>
-<p>23:116 <a name="v=23:116&r=mlk&r=Hqq">fete’âlallâhul-melikul-hakk</a> <br>
+<p>Aynı kökten türeyen bir de <b>Melik</b> ismi var. Kitap'ta 15 kere geçiyor: Çoğu dünya kralları için kullanılmış, 5 tanesi <b>el-Melikul-Hakk</b>: <i>Gerçek Melik</i>. </p>
+<p><a name="v=23:116&r=mlk&r=Hqq">23:116</a> <b>fete’âlallâhul-melikul-hakk</b> <br>
 <i>Gerçek hükümdar olan Allah ne yücedir. O’ndan başka ilah yoktur. O, değerli arşın Sahibidir.</i></p>
 <p>Bu ayetten esinlenen güzel bir levha:
-<img src="image/melikul-hakkul-mubin.jpg" alt="el-melikul-hakk"><br>
-lâ ilâhe illallâh, el-melikul-hakkul-mubîn<br>
-muhammedur-rasulullah, sadikul-va'dil-emîn</p>
+<img src="image/melikul-hakkul-mubin.jpg" alt="el-melikul-hakk">
+<div class="caption">
+  <b>lâ ilâhe illallâh, el-melikul-hakkul-mubîn<br>
+  muhammedur-rasûlullâh, sâdikul-va'dil-emîn</b>
+</div></p>
 <p>Kamer suresinin son ayetinde (<a name="v=54:55&r=mlk&r=qdr">54:55</a>)  bu kelime uzun i ile okunur: "Muktedir bir Melîk." Bk: <a href="../rama/sidq.html">Doğruluk tahtı</a></p>
 <script src="init.js"></script>
   </body>
