--- a/esma/Mumin.html
+++ b/esma/Mumin.html
@@ -14,17 +14,21 @@
 <h3>el-Mu'min, el-Muheymin &emsp;<button class=goBack>◀</button></h3>
 
 <p>Haşr Suresinin sonundan okumaya devam ediyoruz. 
-<img src="image/el-Mumin.jpg" alt=""></p>
-<!-- https://tr.pinterest.com/pin/145663369209213096/ -->
+<img src="image/el-Mumin.jpg" alt="el-Mu'min hat eseri">
+<div class="caption">
+    Kaynak: <a target=Kuran href="https://tr.pinterest.com/pin/145663369209213096/">Pinterest</a>
+</div></p>
 
 <p><a name="v=59:23&r=Amn&r=hmn">59:23</a> <b>el-Mu'min, el-Muheymin</b> <br>
 <i>Güven veren, koruyup gözeten</i></p>
 
 <p>"İman" kelimesinin kökünde iki anlam var: inanç ve güven. İnsanlar için inanç yönü öne çıkıyor, ama Allah "el-Mu'min" ismiyle bizim güven kaynağımız. </p>
 
-<p>Yazılışı ve anlamı benzeyen bu iki kelimenin Kitap'taki yeri çok farklı. Allah için kullanılan "el-Mu'min" yalnız bu ayette, ama aynı kökün muhtelif türevleri 799 kere geçiyor.
-<img src="image/el-Mumin.png" alt=""></p>
-<!-- http://hattatismailtuluce.com/ -->
+<p>Yazılışı ve anlamı benzeyen bu iki kelimenin Kitap'taki yeri çok farklı. Allah için kullanılan "el-Mu'min" yalnız bu ayette, ama aynı kökün muhtelif türevleri 799 kere geçiyor.</p>
+<p><img src="image/el-Mumin.png" alt="Hattatın çalışması">
+<div class="caption">
+    Kaynak: <a target=Kuran href="http://hattatismailtuluce.com/mesk-albumu/#23214-mesk/24359">Hattat İsmail Tülüce</a>
+</div></p>
 
 <p>Diğer kelime "el-Muheymin" ise sadece iki âyette geçiyor. Başka bir yerde Kur'an için kullanılmış: <br>
 <a name="v=5:48&r=ktb&r=hmn">5:48</a> <b>minel-kitâbi vemuheyminen 'aleyhi</b> <br>
