--- a/esma/Rahman.html
+++ b/esma/Rahman.html
@@ -14,25 +14,28 @@
 <h3>er-Rahmân, er-Rahîm &emsp;<button class=goBack>◀</button></h3>
 
 <p>Meşhur Ramazan hadisi "Evveli rahmet..." diye başlar. Ramazan'ın ve Kuran'ın evveli <b>Rahmet</b>'tir, çünkü besmele sadece rahmettir:
-<img src="./image/Batanay_besmele.jpg" alt="besmele"></p>
-<p>1:1 <a name="v=1:1&r=rHm">bismillâhirrahmânirrahîm</a></p>
-<br>
-<p>İkisi de <b>rahmet</b> ile aynı kökten gelen er-Rahmân ve er-Rahîm, güzel isimlerin en başında sayılır. "Rahmân" ismiyle, Allah kulları arasında ayrım yapmaz, herkese yönelir. Adı bu ismi taşıyan sure şöyle başlıyor:
-<img src="./image/Rahman.jpg" alt="er-Rahmân"></p>
-<p>55:1 <a name="v=55:1&r=rHm">er-rahmân, 'allemel-kur-ân</a> <br>
+<img src="./image/Batanay_besmele.jpg" alt="besmele">
+<div class="caption">
+  <b><a name="v=1:1&r=rHm">bismillâhirrahmânirrahîm</a></b>
+</div></p>
+<p>İkisi de <b>rahmet</b> ile aynı kökten gelen er-Rahmân ve er-Rahîm, güzel isimlerin en başında sayılır. "Rahmân" ismiyle, Allah kulları arasında ayrım yapmaz, herkese yönelir. Adı aynı ismi taşıyan sure şöyle başlıyor:
+<img src="./image/Rahman.jpg" alt="er-Rahmân">
+<div class="caption">
+  <b><a name="v=55:1&r=rHm">er-rahmân, 'allemel-kur-ân</a></b>
+</div>
 Demek ki Rahmân, kendi nefsine yazdığı rahmetinin gereği olarak Kuran'ı öğretti.</p>
 <p>Bu isim Allah'ın has ismidir, başkası için asla kullanılmaz. Kitabımızda 18 surede 57 kere geçer ve hepsi "er-Rahmân" şeklinde belirlidir. Belirsiz olarak, "Rahmân" halinde kullanılmaz. İslam öncesi kültürlerde de var olduğunu biliyoruz. "Allah" ismini kullanan Mekke müşrikleri, belki ırkçılık nedeniyle, "Rahmân"ı tanımayı inatla reddettiler.</p>
 <br>
 <p>Diğer ismin tecellisi ise iman gerektiriyor:<br>
-33:43 <a name="v=33:43&r=rHm">vekâne bilmu-minîne rahîmâ</a><br>
+<a name="v=33:43&r=rHm">33:43</a> <b>vekâne bilmu-minîne rahîmâ</b><br>
 Yani "Rahîm" ismi ancak ona layık olan müminler için...</p>
 <br>
 <p>Bu iki rahmet ismi altı ayette yan yana geçiyor:
 <img class=full src="./image/errahman errahim.png" alt="iki isim yan yana"></p>
 <p>Dördünde "<i>errahmân, errahîm</i>" i halinde:<br>
-41:2 <a name="v=41:2&r=rHm">minerrahmânirrahîm</a><br>
+<a name="v=41:2&r=rHm">41:2</a> <b>minerrahmânirrahîm</b><br>
 Haşr suresinin sık tekrarlanan son üç ayetinde ise u halinde, çünkü özne:<br>
-59:22 <a name="v=59:22&r=rHm">huverrahmânurrahîm</a></p>
+<a name="v=59:22&r=rHm">59:22</a> <b>huverrahmânurrahîm</b></p>
 <p>
 <script src="init.js"></script>
   </body>
