--- a/esma/Selam.html
+++ b/esma/Selam.html
@@ -17,8 +17,11 @@
 <img class="full" src="image/sayfa 547.png" alt="sayfa 547"></p>
 <p>Haşr Suresinin <a name="p=547&r={ll~ah&r=smw&r=Hsn">son üç ayetinde</a> 15 güzel isim ve 4 adet lafza-i celal bir arada... Dört âyette geçen "el-esmâul-husnâ" ifadesi de aynı yerde. (Diğerleri: 7:180, 17:110, <a name="v=20:8&r=smw&r=Hsn">20:8</a>)
 </p>
-<p>Aynı sayfada 23. ayetin üç kelimesi <a target=Kuran href="https://tr.pinterest.com/pin/819232988471181812/">bir camiyi süslemiş</a>:
-<img src="image/Kuddûs-Selâm.jpg" alt="Kuddûs-Selâm"></p>
+<p>Aynı sayfada 23. ayetin üç kelimesi bir cami girişini süslüyor:
+<img src="image/Kuddûs-Selâm.jpg" alt="Kuddûs-Selâm">
+<div class="caption">
+    Kaynak: <a target=Kuran href="https://tr.pinterest.com/pin/819232988471181812/">Pinterest</a>
+</div></p>
 <p><a name="v=59:23&r=mlk&r=qds&r=slm">59:23</a> <b>el-melik, el-kuddûs, es-selâm</b>: üç güzel isim birlikte <br>
 </p>
 <p>Hz. Aişe'den gelen bir hadis rivayeti: <br>
@@ -27,8 +30,11 @@ Resulullah (s.a.v.) rüku ve secdede <br>
 (Münezzeh, Mukaddes, Meleklerin ve Ruh'un Rabbi) <br> 
 (Ebu Davud, II, 28-35).</p>
 <br>
-<p>Diğer kelime "es-Selâm" ise günlük hayatımızda esenlik anlamında çok kullanılıyor. <a target=Kuran href="https://tugra-style.com/duvar-cikartmalari/145-duvar-cikartmalari-hat25.html">Ev dekorasyonunda</a> bile...
-<img src="image/es-Selâm.jpg" alt="es-Selâm"></p>
+<p>Diğer kelime "es-Selâm" ise günlük hayatımızda esenlik anlamında çok kullanılıyor. 
+<img src="image/es-Selâm.jpg" alt="es-Selâm">
+<div class="caption">
+    <a target=Kuran href="https://www.tugra-style.com/duvar-cikartmalari/145-duvar-cikartmalari-hat25.html">Ev dekorasyonunda</a> bile...
+</div></p>
 <p><a name="v=10:25&r=dwr&r=slm">10:25</a> <b>vallâhu yehdiy ilâ dâris-selâm</b> <br>
 Allah, selam yurduna çağırır ve dilediğini doğru yola iletir.
 </p>
