--- a/esma/Empty.html
+++ b/esma/Empty.html
@@ -16,13 +16,14 @@
 <p>
 <img src= alt="hat eseri">
 <div class="caption">
-  Kaynak: <a target=Kuran href=>Pinterest</a>
+  Kaynak: <a target=Kuran href="">Pinterest</a>
 </div></p>
 <p>1:1 <a name="v=1:1&r=rHm"></a> <br>
 </p>
 <p>
 <img src= alt=""></p>
-<p>1:1 <a name="v=1:1&r=rHm"></a> <br>
+<a name="v=59:23&r=kbr">59:23</a> <b></b> <br>
+<i></i>
 </p>
 <p></p>
 <br>
