--- a/esma/index.html
+++ b/esma/index.html
@@ -33,7 +33,7 @@
     p {
       margin-top: 4px;
     }
-    #bir li:nth-child(n+7) {
+    #bir li:nth-child(n+8) {
         color: lightgray;
     }
     #iki li {
@@ -56,7 +56,7 @@
   <li>2. <a href="/Kitap/esma/Malik.html">el-Mâlik, el-Melik</a>
   <li>3. <a href="/Kitap/esma/Selam.html">el-Kuddûs, es-Selâm</a>
   <li>4. <a href="/Kitap/esma/Mumin.html">el-Mu'min, el-Muheymin</a>
-  <li>5. el-Cebbâr, el-Mutekebbir
+  <li>5. <a href="/Kitap/esma/Cebbar.html">el-Cebbâr, el-Mutekebbir</a>
   <li>6. el-Hâlık, el-Hallâk
   <li>7. el-Bâri', el-Musavvir
   <li>8. el-Azîz, el-Hakîm
