--- a/esma/index.html
+++ b/esma/index.html
@@ -33,7 +33,7 @@
     p {
       margin-top: 4px;
     }
-    #bir li:nth-child(n+8) {
+    #bir li:nth-child(n+9) {
         color: lightgray;
     }
     #iki li {
@@ -55,10 +55,10 @@
   <li>1. <a href="/Kitap/esma/Rahman.html">er-Rahmân, er-Rahîm</a>
   <li>2. <a href="/Kitap/esma/Malik.html">el-Mâlik, el-Melik</a>
   <li>3. <a href="/Kitap/esma/Selam.html">el-Kuddûs, es-Selâm</a>
-  <li>4. <a href="/Kitap/esma/Mumin.html">el-Mu'min, el-Muheymin</a>
+  <li>4. <a href="/Kitap/esma/Mumin.html">el-Mumin, el-Muheymin</a>
   <li>5. <a href="/Kitap/esma/Cebbar.html">el-Cebbâr, el-Mutekebbir</a>
-  <li>6. el-Hâlık, el-Hallâk
-  <li>7. el-Bâri', el-Musavvir
+  <li>6. <a href="/Kitap/esma/Hallak.html">el-Hâlık, el-Hallâk</a>
+  <li>7. el-Bâri, el-Musavvir
   <li>8. el-Azîz, el-Hakîm
   <li>9. el-Alîm, el-Halîm
   <li>10. el-Âlim, el-Allâm
