add goNext button

--- a/esma/Gafur.html
+++ b/esma/Gafur.html
@@ -11,7 +11,7 @@
   </head>
   <body>
 
-<h3> &emsp;<button class=goBack>◀</button></h3>
+<h3>el-Gafûr, eş-Şekûr &emsp;<button class=goBack>◀</button></h3>
 
 <p>
 <img src="" alt="hat eseri">
