--- a/esma/Aziz.html
+++ b/esma/Aziz.html
@@ -11,7 +11,7 @@
   </head>
   <body>
 
-<h3> &emsp;<button class=goBack>◀</button></h3>
+<h3>el-Azîz, el-Hakîm &emsp;<button class=goBack>◀</button></h3>
 
 <p>
 <img src="" alt="hat eseri">
