--- a/esma/Aziz.html
+++ b/esma/Aziz.html
@@ -13,23 +13,25 @@
 
 <h3>el-Azîz, el-Hakîm &emsp;<button class=goBack>◀</button></h3>
 
-<p>
-<img src="" alt="hat eseri">
+<p>Kitabımızda en sık kullanılan isim çifti "el-Azîz, el-Hakîm" ya da belirsiz "Azîzen Hakîmen" olarak geçen <i>İzzet ve Hikmet</i> sıfatları. Birlikte tam 47 ayetin sonunda kullanılmış, hepsi de bu sırada.
+<img src="image/el-Aziz.jpg" alt="el-Aziz hat eseri">
 <div class="caption">
-  Kaynak: <a target=Kuran href="">Pinterest</a>
-</div></p>
-<p>1:1 <a name="v=1:1&r=rHm"></a> <br>
+  Kaynak: <a target=Kuran href="https://www.pinterest.de/pin/2674081008122293/">Pinterest</a>
+</div>
+<a name="v=3:6&r=Ezz&r=Hkm">3:6</a> &ensp;<a name="v=3:18&r=Ezz&r=Hkm">3:18</a> 
+<b>lâ ilâhe illâ huvel-’azîzul-hakîm</b> <br>
+<i>Tanrı ancak O'dur, mutlak güç ve hikmet sahibidir</i>
 </p>
+<p>Bu iki isim birlikte çok anlamlı: Mutlak güç (izzet) olmasaydı hikmetini gösteremezdi. Hikmet olmasaydı güç anlamsız ve faydasız kalırdı. İnsanlar Allah'ın izzetine sık sık şahit oluyorlar, lakin hikmetini bilmeyince "her şey boşuna" izlenimi çok yaygın.</p>
 <p>
-<img src="" alt=""></p>
-<a name="v=59:23&r=kbr">59:23</a> <b></b> <br>
-<i></i>
+<img src="image/wahuwal-azizul-hakim.jpg" alt="vehuvel-azizul-hakim">
+<div class="caption">
+  <a name="v=59:24&r=Ezz&r=Hkm">59:24</a> <b>vehuvel-azizul-hakim</b> &ensp;
+  <a target=Kuran href="https://hayabyrabi.com/product/rc-753-wahuwal-azizul-hakim/">Kaynak</a>
+</div>
+<i>O Allah’tır, yaratan, var eden, şekil veren. En güzel isimler O'nundur. Göklerde ve yerde olanlar O'nu tesbih eder. Mutlak güç ve hikmet sahibidir.</i>
 </p>
-<p></p>
-<br>
-<p>
-<img src="" alt=""></p>
-<p>1:1 <a name="v=1:1&r=rHm"></a> <br>
+<p>Böylece Haşr Suresinin son üç ayetinde geçen 14 güzel kelimeye, bunlarla ilgili "el-Mâlik" ve "el-Hallâk" isimlerini ekleyerek sayfayı tamamladık. Bu ve sonraki sayfalarda, birlikte kullanılan isim çiftlerini görüyoruz.
 </p>
 <script src="init.js"></script>
   </body>
