--- a/esma/Aziz.html
+++ b/esma/Aziz.html
@@ -24,7 +24,7 @@
 </p>
 <p>Bu iki isim birlikte çok anlamlı: Mutlak güç (izzet) olmasaydı hikmetini gösteremezdi. Hikmet olmasaydı güç anlamsız ve faydasız kalırdı. İnsanlar Allah'ın izzetine sık sık şahit oluyorlar, lakin hikmetini bilmeyince "her şey boşuna" izlenimi çok yaygın.</p>
 <p>
-<img src="image/wahuwal-azizul-hakim.jpg" alt="vehuvel-azizul-hakim">
+<img src="image/el-azizul-hakim.jpg" alt="vehuvel-azizul-hakim">
 <div class="caption">
   <a name="v=59:24&r=Ezz&r=Hkm">59:24</a> <b>vehuvel-azizul-hakim</b> &ensp;
   <a target=Kuran href="https://hayabyrabi.com/product/rc-753-wahuwal-azizul-hakim/">Kaynak</a>
