--- a/esma/index.html
+++ b/esma/index.html
@@ -33,7 +33,7 @@
     p {
       margin-top: 4px;
     }
-    #bir li:nth-child(n+11) {
+    #bir li:nth-child(n+12) {
         color: lightgray;
     }
     #iki li {
@@ -67,7 +67,7 @@
   <li>6. <a href="/Kitap/esma/Hallak.html">el-Hâlık, el-Hallâk</a>
   <li>7. <a href="/Kitap/esma/Bari.html">el-Bâri, el-Musavvir</a>
   <li>8. <a href="/Kitap/esma/Aziz.html">el-Azîz, el-Hakîm</a>
-  <li>9. el-Alîm, el-Halîm
+  <li>9. <a href="/Kitap/esma/Halim.html">el-Alîm, el-Halîm</a>
   <li>10. el-Âlim, el-Allâm
   <li>11. el-Aliyy, el-Azîm
   <li>12. el-Gafûr, eş-Şekûr
