--- a/esma/Allam.html
+++ b/esma/Allam.html
@@ -13,24 +13,43 @@
 
 <h3>el-Âlim, el-Allâm &emsp;<button class=goBack>◀</button></h3>
 
-<p>
-<img src="" alt="hat eseri">
+<p>İlim sıfatlarıyla ilgili diğer iki isim için, anlamı çok yakın iki tamlama görüyoruz: <br>
+  <b>‘âlimul-gayb</b> -- gaybı bilen <br>
+  <b>‘allâmul-guyûb</b> -- gaybları iyi bilen <br>
+Tamlanan zaten belirli olduğu için, baştaki "el-" takısı düşer. Yaygın Esmâ listelerinde bulunmayan bu iki isim üstünde çok çalışılmamış, güzel bir hat levhası bulamadım. "Gaybı bilme" konusuna ışık tutan isimler olduğu için buraya aldım.
+</p>
+<p><b>Gayb</b> “gizli kalmak, gizlenmek, görünmemek, uzaklaşmak, gözden kaybolmak” anlamında masdar ve “gizlenen, hazırda olmayan bulunmayan şey” mânasında isim veya sıfat olarak kullanılır. Ayrıca, “duyular çerçevesine girmeyen ve aklın zaruri olarak gerektirmediği şey” ya da “kalplerde mevcut olsun veya olmasın gözlerden gizli kalan her şey” tarzında açıklanmış. <br>
+  Kaynak: <a target=Kuran href="https://islamansiklopedisi.org.tr/gayb">İslam Ansiklopedisi</a>
+</p>
+<p>İlk ifade <b>‘âlimul-gayb</b> 12 ayette kullanılmış, yarısında "Görünmeyeni ve görüneni bilen" şeklinde: <br>
+<a href="/Rehber/finder.html#b=EAlm%20Algyb">okuyun.github.io/Kuran/#b=EAlm%20Algyb</a>
+<p><a name="v=13:9&r=Elm&r=gyb">13:9</a>
+  <b>‘âlimul-gaybi veş-şehâdetil-kebîrul-mute‘âl</b> <br>
+  <i>Görünmeyeni ve görüneni bilendir, büyüktür, çok yücedir</i>
+</p>
+<br>
+<p>İkinci ifade sadece "Görünmeyenleri iyi bilen" şeklinde:
+<img class=narrow src="image/allamul-guyub.jpg" alt="allamul-guyub"></p>
 <div class="caption">
-  Kaynak: <a target=Kuran href="">Pinterest</a>
-</div></p>
-<p>1:1 <a name="v=1:1&r=rHm"></a> <br>
+  <b>‘allâmul-guyûb</b>
+</div>
+Bu ifade dört ayette geçiyor: <br>
+  <a name="v=5:109&r=Elm&r=gyb">5:109</a>
+  <a name="v=5:116&r=Elm&r=gyb">5:116</a>
+  <a name="v=9:78&r=Elm&r=gyb">9:78</a>
+  <b>‘allâmul-guyûb</b> <br>
+  <a name="v=34:48&r=Elm&r=gyb">34:48</a>
+  <b>Kul inne rabbî yakżifu bilhakki ‘allâmul-guyûb</b> <br>
+  <i>De ki: “Şüphesiz Rabbim gerçeği ortaya koyar, gaybları iyi bilendir”</i>
 </p>
-<p>
-<img src="" alt=""></p>
-<a name="v=59:23&r=kbr">59:23</a> <b></b> <br>
-<i></i>
-</p>
-<p></p>
 <br>
 <p>
-<img src="" alt=""></p>
-<p>1:1 <a name="v=1:1&r=rHm"></a> <br>
-</p>
+<img src="image/Allah-Allam.jpg" alt="Allah-Allam"></p>
+<div class="caption">
+  "Allah" ve "Allâm" kelimelerinin yazım farkı <br>
+  Çift lâm, ilkinde kalın, ikincide ince okunur
+</div></p>
+<br>
 <script src="init.js"></script>
   </body>
 </html>
