--- a/esma/index.html
+++ b/esma/index.html
@@ -33,7 +33,7 @@
     p {
       margin-top: 4px;
     }
-    #bir li:nth-child(n+12) {
+    #bir li:nth-child(n+13) {
         color: lightgray;
     }
     #iki li {
@@ -68,7 +68,7 @@
   <li>7. <a href="/Kitap/esma/Bari.html">el-Bâri, el-Musavvir</a>
   <li>8. <a href="/Kitap/esma/Aziz.html">el-Azîz, el-Hakîm</a>
   <li>9. <a href="/Kitap/esma/Halim.html">el-Alîm, el-Halîm</a>
-  <li>10. el-Âlim, el-Allâm
+  <li>10. <a href="/Kitap/esma/Allam.html">el-Âlim, el-Allâm</a>
   <li>11. el-Aliyy, el-Azîm
   <li>12. el-Gafûr, eş-Şekûr
   <li>13. et-Tevvâb, el-Gaffâr
