--- a/esma/Malik.html
+++ b/esma/Malik.html
@@ -21,7 +21,7 @@
 </div></p>
 <p>"Rahmetin genişliğine güvenip azgınlaşma, hesap var, ödeşme var. Ödeşme gününün Sahibi de yine o rahmetin Sahibidir."</p>
 <p><b>Mâlik</b> ismini anlamamız için bu dünyada küçük ölçekli bir mülkiyet var: "Şuraya kadar benim, şurdan sonrası onun" diyen kayıt sistemleri geliştirmişiz. Lakin mülkün ilk ve gerçek Sahibini unutmak olmaz:
-<img src="image/malikul-mulk.jpg" alt="malikul-mulk">
+<img class=narrow src="image/malikul-mulk.jpg" alt="malikul-mulk">
 <div class="caption">
   <b><a name="v=3:26&r=mlk">kulillâhumme mâlikel-mulk</a></b>
 </div></p>
