--- a/esma/index.html
+++ b/esma/index.html
@@ -33,7 +33,7 @@
     p {
       margin-top: 4px;
     }
-    #bir li:nth-child(n+13) {
+    #bir li:nth-child(n+14) {
         color: lightgray;
     }
     #iki li {
@@ -69,7 +69,7 @@
   <li>8. <a href="/Kitap/esma/Aziz.html">el-Azîz, el-Hakîm</a>
   <li>9. <a href="/Kitap/esma/Halim.html">el-Alîm, el-Halîm</a>
   <li>10. <a href="/Kitap/esma/Allam.html">el-Âlim, el-Allâm</a>
-  <li>11. el-Aliyy, el-Azîm
+  <li>11. <a href="/Kitap/esma/Aliyy.html">el-Aliyy, el-Azîm</a>
   <li>12. el-Gafûr, eş-Şekûr
   <li>13. et-Tevvâb, el-Gaffâr
   <li>14. el-Afuvv, er-Raûf
