--- a/esma/Gafur.html
+++ b/esma/Gafur.html
@@ -13,23 +13,49 @@
 
 <h3>el-Gafûr, eş-Şekûr &emsp;<button class=goBack>◀</button></h3>
 
+<p><i>Mağfiret</i> <b>el-Gafûr</b>, <i>Teşekkür</i> ise <b>eş-Şekûr</b> isimlerinin tecellisidir. İlki <b>hataları</b> bütünüyle silmek, ikincisi <b>iyilikleri</b> takdir etmek anlamında. Benzer kelimeler olan Mağfiret ile Affetmek, Teşekkür ile Hamd aynı şeyler değil. Hamd Allah'ın olduğu gibi Mağfiret de ancak O'nun. </p>  
+<p class=preWrap>İki anlamda "Mağfiret ancak Allah’a ait" diyoruz:
+* Günahları bağışlayacak başka kimse yoktur. Ancak Allah dilerse bağışlar, dilerse şefaat yetkisi verir. Son söz O'nundur.
+* İnsan affedebilir ama asla mağfiret edemez. Başkalarının bize karşı hataları, biz unutmadıkça bir burukluk bırakırır içimizde.
+<img class=full src="image/vemen yagfiru.jpg" alt="vemen yagfiruz-zunûbe"></p>
+<p><a name="v=3:135&r=gfr&r=*nb">3:135</a> 
+<b>vemen yagfiruz-zunûbe illallâh</b> <br>
+<i>Günahları Allah'tan başka kim silebilir?</i>
+</p>
+<p class=preWrap>İlim sıfatlarıyla ilgili üç güzel isim görmüşük:
+  <b>‘âlim</b> -- bilen
+  <b>‘alîm</b> -- en iyi bilen
+  <b>‘allâm</b> -- herşeyi bilen
+
+Bunun gibi, mağfiretle ilgili üç isim var:
+  <b>gâfir</b> -- hataları silen
+  <b>gafûr</b> -- hataları çokça silen
+  <b>gaffâr</b> -- bütün hataları silen
+
+Bu isimlerin ilki sadece bir âyette geçiyor ve Esmâ listelerinde yok:
+<a name="v=40:3&r=gfr&r=*nb">40:3</a> <b>gâfiriż-żenbi veqâbilit-tevbi ...</b>
+<i>günahı bağışlayan, tevbeyi kabul eden</i>
+İkincisi aşağıda, diğeri sonraki güne kaldı.</p>
+<p class=small>
+  ...aynı kökten geldikleri için eş anlamlı gibi görünen gāfir, gafûr, gaffâr isimleri Kur’an’da geçmekte, son ikisi doksan dokuz isim hadisinin listesinde de yer almaktadır. Ancak gāfir bağışlayıcılık vasfının sadece mevcudiyetini gösterirken mübalağa sîgaları olan iki isimden gafûr “birden fazla günahı bağışlayan”, gaffâr ise “sürekli bağışlayıcı olan” mânasına gelir. <br>
+  Kaynak: <a target=Kuran href="https://islamansiklopedisi.org.tr/esma-i-husna">İslam Ansiklopedisi</a>
+</p><br>
 <p>
-<img src="" alt="hat eseri">
+<img class=narrow src="image/el-gafur.jpg" alt="el-gafur"></p>
 <div class="caption">
-  Kaynak: <a target=Kuran href="">Pinterest</a>
-</div></p>
-<p>1:1 <a name="v=1:1&r=rHm"></a> <br>
-</p>
+  <b>el-Gafûr</b> -- hataları silen
+</div>
 <p>
-<img src="" alt=""></p>
-<a name="v=59:23&r=kbr">59:23</a> <b></b> <br>
-<i></i>
-</p>
-<p></p>
-<br>
-<p>
-<img src="" alt=""></p>
-<p>1:1 <a name="v=1:1&r=rHm"></a> <br>
+<img class=narrow src="image/es-sekur.jpg" alt="es-sekur"></p>
+<div class="caption">
+  <b>eş-Şekûr</b> -- iyilikleri ödüllendiren
+</div>
+<p>Bu iki ismin yan yana geçtiği üç âyet: <br>
+<a name="v=35:30&r=gfr&r=$kr">35:30</a>&ensp;
+<a name="v=35:34&r=gfr&r=$kr">35:34</a>&ensp;
+<a name="v=42:23&r=gfr&r=$kr">42:23</a>
+<b>innallâhe ġafûrun şekûr</b> <br>
+<i>Allah çok bağışlayıcıdır, iyilikleri fazlasıyla ödüllendirir</i>
 </p>
 <script src="init.js"></script>
   </body>
