--- a/esma/index.html
+++ b/esma/index.html
@@ -33,10 +33,10 @@
     p {
       margin-top: 4px;
     }
-    #bir li:nth-child(n+14) {
+    #bir li:nth-child(n+15) {
         color: lightgray;
     }
-    #iki li {
+    #iki li:nth-child(n+1) {
         color: lightgray;
     }
     div.nav {
@@ -70,7 +70,7 @@
   <li>9. <a href="/Kitap/esma/Halim.html">el-Alîm, el-Halîm</a>
   <li>10. <a href="/Kitap/esma/Allam.html">el-Âlim, el-Allâm</a>
   <li>11. <a href="/Kitap/esma/Aliyy.html">el-Aliyy, el-Azîm</a>
-  <li>12. el-Gafûr, eş-Şekûr
+  <li>12. <a href="/Kitap/esma/Gafur.html">el-Gafûr, eş-Şekûr</a>
   <li>13. et-Tevvâb, el-Gaffâr
   <li>14. el-Afuvv, er-Raûf
 </ol>
@@ -91,6 +91,7 @@
   <li>28. el-Ganî, el-Hamîd
   <li>29. zul-celâli vel-ikrâm
 </ol>
+<p><br></p>
 <script src="init.js"></script>
   </body>
 </html>
