--- a/esma/Gafur.html
+++ b/esma/Gafur.html
@@ -16,7 +16,7 @@
 <p><i>Mağfiret</i> <b>el-Gafûr</b>, <i>Teşekkür</i> ise <b>eş-Şekûr</b> isimlerinin tecellisidir. İlki <b>hataları</b> bütünüyle silmek, ikincisi <b>iyilikleri</b> takdir etmek anlamında. Benzer kelimeler olan Mağfiret ile Affetmek, Teşekkür ile Hamd aynı şeyler değil. Hamd Allah'ın olduğu gibi Mağfiret de ancak O'nun. </p>  
 <p class=preWrap>İki anlamda "Mağfiret ancak Allah’a ait" diyoruz:
 * Günahları bağışlayacak başka kimse yoktur. Ancak Allah dilerse bağışlar, dilerse şefaat yetkisi verir. Son söz O'nundur.
-* İnsan affedebilir ama asla mağfiret edemez. Başkalarının bize karşı hataları, biz unutmadıkça bir burukluk bırakırır içimizde.
+* İnsan affedebilir ama asla mağfiret edemez. Başkalarının bize karşı hataları, biz unutmadıkça bir burukluk bırakır içimizde.
 <img class=full src="image/vemen yagfiru.jpg" alt="vemen yagfiruz-zunûbe"></p>
 <p><a name="v=3:135&r=gfr&r=*nb">3:135</a> 
 <b>vemen yagfiruz-zunûbe illallâh</b> <br>
