--- a/esma/Tevvab.html
+++ b/esma/Tevvab.html
@@ -13,23 +13,33 @@
 
 <h3>et-Tevvâb, el-Gaffâr &emsp;<button class=goBack>◀</button></h3>
 
-<p>
-<img src="" alt="hat eseri">
+<p>Mağfiret isimlerinden ikisi mübalağa sîgasında: <br>
+<img class=narrow src="image/tevvab.jpg" alt="tevvab">
 <div class="caption">
-  Kaynak: <a target=Kuran href="">Pinterest</a>
-</div></p>
-<p>1:1 <a name="v=1:1&r=rHm"></a> <br>
+  <b>et-Tevvâb</b> -- tevbeyi kabul eden
+</div>
+<p>Yeryüzünde henüz iki insan varken, ilk Arefe gününde Rahmet tepesinde, Hz Adem 
+<a name="v=7:23&r=gfr&r=rHm">bazı kelimeler</a> öğrenir ve ilk tevbeyi onunla yapar. <br>
+  <a name="v=2:37&r=twb&r=rHm">2:37</a> <b>innehû huvet-tevvâbur-rahîm</b> <br>
+  <i>O, tevbeyi kabul buyuran ve rahmeti sınırsız olandır</i>
 </p>
-<p>
-<img src="" alt=""></p>
-<a name="v=59:23&r=kbr">59:23</a> <b></b> <br>
-<i></i>
-</p>
-<p></p>
+<p>Âdemoğluna tahsis edilen dünya, günahın bedeli değil, belki tevbenin ödülüdür.</p>
 <br>
 <p>
-<img src="" alt=""></p>
-<p>1:1 <a name="v=1:1&r=rHm"></a> <br>
+<img class=narrow src="image/gaffar.jpg" alt="gaffar">
+<div class="caption">
+  <b>el-Gaffâr</b> -- bütün hataları silen
+</div>
+<p>Uzun yıllar sonra, Hz Nuh kavmine şöyle nida ediyordu: <br>
+  <a name="v=71:10&r=gfr">71:10</a> <b>istaġfirû rabbekum innehû kâne ġaffârâ</b> <br>
+  <i>"Rabbinizin sizi bağışlamasını isteyin, O çok bağışlayıcıdır"</i>
+</p>
+<br>
+<p>Bilmem kaç bin sene sonra, belki yine bir Arefe gününde Rahmet tepesinde, Nebilerin mühürü (Salât ve selâm ona) insanların akın akın Allah'ın dinine girdiğini görüp tesbih ve istiğfar ediyordu. Nasr Suresi orada indirildi: <br>
+<img src="image/kane tevvaba.jpg" alt="innehu kane tevvaba">
+<p>
+  <a name="v=110:3&r=gfr&r=twb">110:3</a> <b>vestaġfirhu innehû kâne tevvâbâ</b> <br>
+  <i>... bağışlanmayı dile, O tevbeyi çok kabul edendir</i>
 </p>
 <script src="init.js"></script>
   </body>
