--- a/esma/index.html
+++ b/esma/index.html
@@ -33,9 +33,9 @@
     p {
       margin-top: 4px;
     }
-    #bir li:nth-child(n+15) {
+    /* #bir li:nth-child(n+2) {
         color: lightgray;
-    }
+    } */
     #iki li:nth-child(n+1) {
         color: lightgray;
     }
@@ -71,7 +71,7 @@
   <li>10. <a href="/Kitap/esma/Allam.html">el-Âlim, el-Allâm</a>
   <li>11. <a href="/Kitap/esma/Aliyy.html">el-Aliyy, el-Azîm</a>
   <li>12. <a href="/Kitap/esma/Gafur.html">el-Gafûr, eş-Şekûr</a>
-  <li>13. et-Tevvâb, el-Gaffâr
+  <li>13. <a href="/Kitap/esma/Tevvab.html">et-Tevvâb, el-Gaffâr</a>
   <li>14. el-Afuvv, er-Raûf
 </ol>
 <ol id="iki">
