--- a/esma/Bari.html
+++ b/esma/Bari.html
@@ -41,9 +41,12 @@ Creator, Inventor, Bestower of forms
 <a target=Kuran href="https://corpus.quran.com/translation.jsp?chapter=59&verse=24">corpus.quran.com</a>
 
 </p>
-<p>"el-Bâri" kelimesi, Türkçe <i>berâat</i> ve <i>berî olmak</i> ile aynı kökten türetilmiş, sonunda ‘ayn değil hemze var.
+<p>"el-Bâri" kelimesi, Türkçe <i>berâat</i> ve <i>berî olmak</i> ile aynı kökten türetilmiş, sonunda ‘ayn değil hemze var.</p>
 <img class=narrow src="image/al-bari.png" alt="el-Bâri">
-Muhtelif türevleri 31 kere kullanılan bir kökten gelmesine rağmen, Allah anlamında bir tek şu âyette geçiyor: <br>
+<div class="caption">
+  <b>el-Bâri</b> -- var eden
+</div>
+<p>Muhtelif türevleri 31 kere kullanılan bir kökten gelmesine rağmen, Allah anlamında bir tek şu âyette geçiyor: <br>
 <a name="v=2:54&r=xyr&r=brA">2:54</a> 
 <b>żâlikum ḣayrun lekum ‘inde bâriikum</b> <br>
 <i>Böylesi, Yaratıcınız katında sizin için hayırlıdır</i>
@@ -51,6 +54,9 @@ Muhtelif türevleri 31 kere kullanılan bir kökten gelmesine rağmen, Allah anl
 <br>
 <p>"el-Musavvir" kelimesi, Türkçe <i>sûret</i> ve <i>sûr</i> ile aynı kökten türetilmiş, sad ile yazılır. (sin ile yazılan <i>sûre</i> kelimesinin kökü farklı) Söz konusu <a name="v=59:24&r=xlq&r=brA&r=Swr">59:24</a> dışında ancak fiil halinde kullanılmış.
 <img class=narrow src="image/al-musavvir.jpg" alt="el-Musavvir"></p>
+<div class="caption">
+  <b>el-Musavvir</b> -- biçim veren
+</div>
 <p>Şu âyet, "tasarlama" anlamına yer bırakmıyor: <br>
 <a name="v=7:11&r=xlq&r=Swr">7:11</a> 
 <b>velekad ḣaleknâkum śumme savvernâkum</b> <br>
