--- a/esma/Cebbar.html
+++ b/esma/Cebbar.html
@@ -26,8 +26,8 @@
 <p>Diğer isim <b>el-Mutekebbir</b> de insanlar için olumsuz, Allah için gerekli, çünkü yalnız O büyüklenmeyi, kibirlenmeyi hak eder. 
 <img class=narrow src="image/mutekebbir.png" alt="mutekebbir hat eseri">
 <div class="caption">
-  el-Mutekebbir -- Kaynak: <a target=Kuran href="https://tr.pinterest.com/pin/752523419007171824/">Pinterest</a>
-</div></p>
+  <b>el-Mutekebbir</b> -- büyük ve kibirli
+</div>
 <p>Bu iki ismin bir arada geçtiği bir âyet daha var: <br>
 <a name="v=40:35&r=kbr&r=jbr">40:35</a> <b>'alâ kulli kalbi mutekebbirin cebbâr</b><br>
 <i>Allah, her böbürlenen zorbanın kalbini öylece mühürler</i>
