--- a/esma/Mumin.html
+++ b/esma/Mumin.html
@@ -14,7 +14,7 @@
 <h3>el-Mu'min, el-Muheymin &emsp;<button class=goBack>◀</button></h3>
 
 <p>Haşr Suresinin sonundan okumaya devam ediyoruz. 
-<img src="image/el-Mumin.jpg" alt="el-Mu'min hat eseri">
+<img class=narrow src="image/el-Mumin.jpg" alt="el-Mu'min hat eseri">
 <div class="caption">
     Kaynak: <a target=Kuran href="https://tr.pinterest.com/pin/145663369209213096/">Pinterest</a>
 </div></p>
@@ -24,8 +24,8 @@
 
 <p>"İman" kelimesinin kökünde iki anlam var: inanç ve güven. İnsanlar için inanç yönü öne çıkıyor, ama Allah "el-Mu'min" ismiyle bizim güven kaynağımız. </p>
 
-<p>Yazılışı ve anlamı benzeyen bu iki kelimenin Kitap'taki yeri çok farklı. Allah için kullanılan "el-Mu'min" yalnız bu ayette, ama aynı kökün muhtelif türevleri 799 kere geçiyor.</p>
-<p><img src="image/el-Mumin.png" alt="Hattatın çalışması">
+<p>Yazılışı ve anlamı benzeyen bu iki kelimenin Kitap'taki yeri çok farklı. Allah için kullanılan "el-Mu'min" yalnız bu ayette, ama aynı kökün muhtelif türevleri <a href="/Kuran/mujam.html#r=Amn">799 kere geçiyor</a>.</p>
+<p><img class=narrow src="image/el-Mumin.png" alt="Hattatın çalışması">
 <div class="caption">
     Kaynak: <a target=Kuran href="http://hattatismailtuluce.com/mesk-albumu/#23214-mesk/24359">Hattat İsmail Tülüce</a>
 </div></p>
