--- a/esma/Tevvab.html
+++ b/esma/Tevvab.html
@@ -41,6 +41,8 @@
   <a name="v=110:3&r=gfr&r=twb">110:3</a> <b>vestaġfirhu innehû kâne tevvâbâ</b> <br>
   <i>... bağışlanmayı dile, O tevbeyi çok kabul edendir</i>
 </p>
+<p>Bu üç örnekte ortak ders şudur: Önce kul Rabbine yönelip bağışlanma dileyecek, sonra Rabbi bu muhteşem isimlerle tecelli edecek. Başka yolu yok, hataları önceden silinmiş olan Efendimizden bile istiğfar isteniyor.
+</p>
 <script src="init.js"></script>
   </body>
 </html>
